# 1brc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conandata.yml
benchmark/: basic_benchmark.cpp  benchmark_util.h  hash_benchmark.cpp  main.cpp  parallel_test.cpp  parse_number_test.cpp  parse_station_test.cpp  parser_benchmark.cpp  single_line_benchmark.cpp
src/: allocator.cpp  allocator.h  data.h  env.h  file_memory_map.h  find_byte.h  hash.h  main.cpp  multi_line_reader.cpp  multi_line_reader.h  number_reader.cpp  number_reader.h  parallelizer.cpp  parallelizer.h  parse.h  parse_number.h  parse_station.h  parse_station_v2_main.cpp  parse_station_v3_main.cpp  parser.cpp  parser.h  single_line_reader.cpp  single_line_reader.h  statistics_map.cpp  statistics_map.h  structs.h  utils.h  worker.h
src/parallel/: memory_contiguous_allocator.h  mutex_free_contiguous_allocator.h  mutex_free_worker_v1.h  worker.h
src/parser/: parse.h  parse_number.h  parse_station.h
src/utils/: env.h  file_memory_map.h  hash_map.h
test/: allocator_test.cpp  main.cpp  multi_line_reader_test.cpp  parallelizer_test.cpp  parser_test.cpp
